--- a/PDTiledView/en.lproj/MainStoryboard_iPad.storyboard
+++ b/PDTiledView/en.lproj/MainStoryboard_iPad.storyboard
@@ -13,14 +13,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="fej-QM-5tN" customClass="PDTiledView">
-                                <rect key="frame" x="397" y="72" width="276" height="707"/>
+                                <rect key="frame" x="695" y="20" width="53" height="964"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GDc-mL-lDR">
+                                <rect key="frame" x="82" y="467" width="529" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="alertLabel" destination="GDc-mL-lDR" id="7uX-me-q1F"/>
                         <outlet property="tiledView" destination="fej-QM-5tN" id="nMn-LB-hlp"/>
                     </connections>
                 </viewController>
@@ -35,6 +43,7 @@
         <class className="PDViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PDViewController.h"/>
             <relationships>
+                <relationship kind="outlet" name="alertLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="tiledView" candidateClass="PDTiledView"/>
             </relationships>
         </class>
